--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeApi</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>PokeApi</h1>
     <button id="fetch">Generar</button>
