UPDATE: working input field + animations

--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokeApi</title>
+    <title>Guess the Pokemon</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1>PokeApi</h1>
-    <button id="fetch">Generar</button>
-    
-    <div id="pokemon-container">
-        <img id="pokemon-imagen" src="" alt="Pokemon">
-        <div id="pokemon-info">Haz click para generar un pokemon</div>
+    <div class="loading-screen" id="loading-screen">
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png" alt="Loading..." class="pokeball">
+        <div class="progress" id="loading-progress">Loading Pokemon data... 0%</div>
+    </div>
+    <div class="container">
+        <h1>Guess the Pokemon</h1>
+        <div class="search-container">
+            <div class="autocomplete-container">
+                <input type="text" id="pokemon-input" placeholder="Enter a Pokemon name..." autocomplete="off">
+                <div id="autocomplete-dropdown" class="autocomplete-dropdown"></div>
+            </div>
+        </div>
+        <div id="error-message" class="error-message"></div>
+        <div id="loading" class="loading"></div>
+        <div id="pokemon-list" class="pokemon-list"></div>
     </div>
 
     <script src="script.js"></script>
