--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <div id="pokemon-list" class="pokemon-list"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
