--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
     <div class="card-wrapper">
       <div class="card">Multiplayer</div>
+      <a href="./multiplayer/public/index.html">
       <div class="hologram">
         <div class="pokemon-background"></div>
         <div class="hologram-content">
@@ -36,6 +37,7 @@
           </div>
         </div>
         <div class="hologram-shine"></div>
+      </a>
       </div>
     </div>
   </div>
