FIX: code refactor

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <div class="card-wrapper">
       <div class="card">Multiplayer</div>
-      <a href="./multiplayer/public/index.html">
+      <a href="./multiplayer/index.html">
       <div class="hologram">
         <div class="pokemon-background"></div>
         <div class="hologram-content">
