--- a/public/singleplayer/index.html
+++ b/public/singleplayer/index.html
@@ -25,5 +25,6 @@
     </div>
 
     <script type="module" src="../src/main.js"></script>
+    <script type="module" src="../src/game.js"></script>
 </body>
 </html>
