--- a/multiplayer/index.html
+++ b/multiplayer/index.html
@@ -38,10 +38,12 @@
         <img id="pokemon-imagen" src="" alt="Pokemon">
         <div id="pokemon-info"></div>
       </div>
+      <input type="text" id="pokemoninput" placeholder="Enter a Pokemon name..." autocomplete="off">
+      
     </div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="./script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
