multiplayer win screen fix

--- a/multiplayer/game.html
+++ b/multiplayer/game.html
@@ -26,7 +26,7 @@
             <div class="header">
                 <div class="title-container">
                     <h1>Adivina el Pokémon</h1>
-<!--Alguien mejore esto porfavor--><p class="subtitle">¡Bienvenido! Se selecciono un pokemon aleatorio, tu trabajo es adivinar quien es, ¡ prueba escribiendo en la caja !</p>
+                    <p class="subtitle">¡Bienvenido! Se selecciono un pokemon aleatorio, tu trabajo es adivinar quien es, ¡ prueba escribiendo en la caja !</p>
                 </div>
                 <div class="hint-container">
                     <div class="hint" data-hint-number="1" data-attempts="3">
@@ -83,7 +83,6 @@
         <h2 class="win-modal-title">¡Ganaste!</h2>
         <div class="win-modal-subtitle" id="win-modal-pokemon"></div>
         <div class="win-modal-buttons">
-          <button id="play-again-btn">Jugar de nuevo</button>
           <button id="back-to-lobby-btn">Volver a la sala</button>
         </div>
       </div>
