--- a/singleplayer/index.html
+++ b/singleplayer/index.html
@@ -26,7 +26,7 @@
             <div class="header">
                 <div class="title-container">
                     <h1>Adivina el Pokémon</h1>
-<!--Alguien mejore esto porfavor--><p class="subtitle">¡Bienvenido! Se selecciono un pokemon aleatorio, tu trabajo es adivinar quien es, ¡ prueba escribiendo en la caja !</p>
+<p class="subtitle">¡Bienvenido al desafío! Hemos seleccionado un Pokémon aleatorio y tu misión es descubrir cuál es. ¡Escribe tu respuesta en la caja de búsqueda y guiate con las respuestas!</p>
                 </div>
                 <div class="hint-container">
                     <div class="hint" data-hint-number="1" data-attempts="3">
