--- a/multiplayer/index.html
+++ b/multiplayer/index.html
@@ -13,13 +13,12 @@
 
     <div id="lobbyScreen" class="card">
       <h1>PokeGuesser - Multijugador</h1>
-      <p class="center">¡ Crea una nueva sala o únete a una existente para competir contra otros jugadores para adivinar el Pokemon antes que todos !</p>
+      <p class="center">Crea una nueva sala o únete a una existente </p>
       <button id="createRoomBtn" style="  background-color: #364067;" class="button">Crear Sala</button>
-      <br> <p>O tambien puedes</p>
-      <div>
+      <p> ! O compite contra otros jugadores para adivinar el Pokemon antes que todos !</p>
+      <div class="joinRoom">
         <input type="text" id="joinRoomInput" placeholder="Ingresa el ID de la Sala">
         <button id="joinRoomBtn" style="background-color: #fec017;" class="button secondary">Unirse a Sala</button>  
-        
       </div>
     </div>
     
