Rooms full styling

--- a/multiplayer/index.html
+++ b/multiplayer/index.html
@@ -41,7 +41,9 @@
     <div id="roomScreen" class="card hidden">
       <h1>PokeGuesser - Multijugador</h1>
       <h2>Sala Actual: <span id="roomId">Cargando...</span></h2>
-      <p id="roomMembers">Miembros: Cargando...</p>
+      <div class="members-box">
+        <p id="roomMembers">Miembros: Cargando...</p>
+      </div>
       <div class="room-actions">
         <button id="leaveRoomBtn" class="button secondary">Salir de la Sala</button>
         <button id="readyBtn" class="button">Listo</button>
