--- a/multiplayer/index.html
+++ b/multiplayer/index.html
@@ -25,6 +25,21 @@
   </video>
   <div class="pokemon-columns" id="pokemonColumns"></div>
   
+  <!-- Modal de bienvenida para introducir nombre de usuario -->
+  <div id="username-modal-overlay" class="modal-overlay" style="display:flex;"></div>
+  <div id="username-modal" class="win-modal" style="display:block;">
+    <div class="win-modal-content">
+      <h2 class="win-modal-title">Bienvenido</h2>
+      <div class="win-modal-subtitle">¿Cuál es tu nombre de entrenador?</div>
+      <div class="username-input-container">
+        <input type="text" id="username-input" placeholder="Ingresa tu nombre" maxlength="12" class="username-input">
+      </div>
+      <div class="win-modal-buttons">
+        <button id="username-submit-btn" class="win-button">Continuar</button>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
 
     <div id="lobbyScreen" class="card">
@@ -47,6 +62,18 @@
       <div class="room-actions">
         <button id="leaveRoomBtn" class="button secondary">Salir de la Sala</button>
         <button id="readyBtn" class="button">Listo</button>
+      </div>
+    </div>
+
+    <!-- Modal para sala completa -->
+    <div id="room-full-modal-overlay" class="modal-overlay" style="display:none;"></div>
+    <div id="room-full-modal" class="win-modal" style="display:none;">
+      <div class="win-modal-content">
+        <h2 class="win-modal-title">Oh-oh</h2>
+        <div class="win-modal-subtitle">La sala está completa</div>
+        <div class="win-modal-buttons">
+          <button id="back-to-lobby-btn-full" class="win-button">Volver al inicio</button>
+        </div>
       </div>
     </div>
   </div>
