vengo de bajarme un sky entero, con suerte se que esto esta bien

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokemon</title>
+  <title>Pokémon | Inicio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,14 +13,14 @@
   <div class="container">
     <div class="card-wrapper" id="container-1">
       <div class="card">
-        <span>Singleplayer</span></div>
+        <span>Un Solo Jugador</span></div>
       <a href="./singleplayer/index.html">
       <div class="hologram">
         <div class="pokemon-background"></div>
         <div class="hologram-content">
           <div class="hologram-footer">
-            <div class="hologram-legendary">Singleplayer</div>
-            <div class="hologram-description">Play against yourself and try to guess the pokemon in less than 10 tries!</div>
+            <div class="hologram-legendary">Un Solo Jugador</div>
+            <div class="hologram-description">¡Juega contra ti mismo e intenta adivinar el pokémon en menos de 10 intentos!</div>
           </div>
         </div>
         <div class="hologram-shine"></div>
@@ -30,15 +30,15 @@
 
     <div class="card-wrapper" id="container-2">
       <div class="card">
-        <span>Multiplayer</span>  
+        <span>Multijugador</span>  
       </div>
       <a href="./multiplayer/index.html">
       <div class="hologram">
         <div class="pokemon-background"></div>
         <div class="hologram-content">
           <div class="hologram-footer">
-            <div class="hologram-legendary">Multiplayer</div>
-            <div class="hologram-description">Play against others and try to guess the pokemon in the fewest time possible!</div>
+            <div class="hologram-legendary">Multijugador</div>
+            <div class="hologram-description">¡Juega contra otros e intenta adivinar el pokémon en el menor tiempo posible!</div>
           </div>
         </div>
         <div class="hologram-shine"></div>
