--- a/multiplayer/index.html
+++ b/multiplayer/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PokeGuesser - Multijugador</title>
+  <title>Pokémon | Multijugador</title>
   <link rel="stylesheet" href="./styles.css">
   <style>
     .video-background {
@@ -21,7 +21,7 @@
 <body>
   <video class="video-background" autoplay loop muted playsinline>
     <source src="../assets/images/Background.mp4" type="video/mp4">
-    Your browser does not support the video tag.
+    Tu navegador no soporta videos.
   </video>
   <div class="pokemon-columns" id="pokemonColumns"></div>
   
