--- a/singleplayer/index.html
+++ b/singleplayer/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adivina el Pokémon</title>
+    <title>Pokémon | Un Solo Jugador</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css">
 </head>
@@ -26,7 +26,7 @@
             <div class="header">
                 <div class="title-container">
                     <h1>Adivina el Pokémon</h1>
-<p class="subtitle">¡Bienvenido al desafío! Hemos seleccionado un Pokémon aleatorio y tu misión es descubrir cuál es. ¡Escribe tu respuesta en la caja de búsqueda y guiate con las respuestas!</p>
+                <p class="subtitle">¡Un Pokémon salvaje ha aparecido en la hierba alta! Usa tus habilidades de detective para descubrir quién es. ¡Adivina su nombre, compara sus características y convierte en el mejor Maestro Pokémon!</p>
                 </div>
                 <div class="hint-container">
                     <div class="hint" data-hint-number="1" data-attempts="3">
