--- a/singleplayer/index.html
+++ b/singleplayer/index.html
@@ -16,7 +16,7 @@
     <div class="pokemon-columns" id="pokemonColumns"></div>
 
     <div class="loading-screen" id="loading-screen">
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png"
+        <img src="../assets/images/Pokebola.png"
             alt="Cargando..." class="pokeball">
         <div class="progress" id="loading-progress">0%, Llamando a los Pokemons.</div>
     </div>
