--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 
 <div class="pokemon-columns" id="pokemonColumns"></div>
 <body id="body">
-  <video class="video-background" autoplay loop muted playsinline>
-    <source src="./assets/images/Background.mp4" type="video/mp4">
-    Tu navegador no soporta videos.
-  </video>
-  <header>¡ Guess The Pokemon !</header>
+  <img class="video-background" src="./assets/images/arceus-art (1).jpg" alt="">
+  <header>Pokeguesser</header>
+  
   <div class="container">
     <div class="card-wrapper" id="container-1">
       <div class="card">
