--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
 <div class="pokemon-columns" id="pokemonColumns"></div>
 <body id="body">
-  <img class="video-background" src="./assets/images/arceus-art (1).jpg" alt="">
-  <header>Pokeguesser</header>
-  
+  <img class="video-background" src="./assets/images/thumb-1920-686188.jpg" alt="">
+  <header>¡ Adivina el pokemon !</header>
   <div class="container">
     <div class="card-wrapper" id="container-1">
       <div class="card">
