--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hologram-content">
           <div class="hologram-footer">
             <div class="hologram-legendary">Un Solo Jugador</div>
-            <div class="hologram-description">¡Juega contra ti mismo e intenta adivinar el pokémon en menos de 10 intentos!</div>
+            <div class="hologram-description">¡Juega contra ti mismo e intenta adivinar el pokémon!</div>
           </div>
         </div>
         <div class="hologram-shine"></div>
