--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="pokemon-columns" id="pokemonColumns"></div>
 <body id="body">
-  <img class="video-background" src="./assets/images/thumb-1920-686188.jpg" alt="">
+  <img class="video-background" src="./assets/images/index.webp" alt="">
   <header>¡ Adivina el pokemon !</header>
   <div class="container">
     <div class="card-wrapper" id="container-1">
