--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
 <div class="pokemon-columns" id="pokemonColumns"></div>
 <body id="body">
-  <img class="video-background" src="./assets/images/index.webp" alt="">
+  <video class="video-background" autoplay loop muted playsinline>
+    <source src="./assets/images/index.mp4" type="video/mp4">
+    Tu navegador no soporta videos.
+  </video>
   <header>¡ Adivina el pokemon !</header>
   <div class="container">
     <div class="card-wrapper" id="container-1">
